syntax = "proto3";

package pb;

import "rpc_signin_user.proto";
import "rpc_create_user.proto";


option go_package = "github.com/devphasex/cedar-bank-api/pb";


service SimpleBank {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc SigninUser(CreateSigninRequest) returns (CreateSigninResponse);
}
